# ai-assisted-betting

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.snapshot  Dockerfile.worker  README.md  pyproject.toml  railway.json  railway.snapshot.json  railway.worker.json
app/: __init__.py  api.py  cli.py  config.py
app/core/: __init__.py  evaluator.py  feature_builder.py  paper_bet_logger.py  prediction_engine.py  result_settler.py  team_aliases.py  value_detector.py
app/db/: engine.py  migrations.py  models.py  repositories.py
app/normalizers/: __init__.py  match_normalizer.py  odds_normalizer.py
app/providers/: __init__.py  api_football_provider.py  base.py  football_data_provider.py  misli_public.py  misli_results.py  sample_provider.py  sportmonks_provider.py  sportytrader_results.py
app/schemas/: __init__.py  match.py  odds.py  result.py
app/services/: ai_analysis_evals.py  ai_analysis_service.py  ai_prompt_registry.py  analysis_service.py  api_football_context_import_service.py  bet_ledger_service.py  collection_service.py  combination_service.py  comparison_service.py  daily_paper_journal_service.py  evaluation_service.py  external_context_probe_service.py  feature_enrichment_audit_service.py  football_data_service.py  live_collection_service.py  live_cycle_service.py  live_result_service.py  live_snapshot_service.py  live_status_service.py  misli_result_service.py  odds_movement_service.py  (+13 more)
dashboard/: Dockerfile  package-lock.json  package.json  vite.config.ts
tools/: misli-public-snapshot.mjs  misli-public-snapshot.test.mjs
(+205 files in other folders)
